forth/test/fail/test_dot_call_throw.af
\ Must fail to compile.
fun: test_dot_call_throw_fail { -- err }
  " test_err" throw
end
